--- a/src/components/about/about-contents/skills.css
+++ b/src/components/about/about-contents/skills.css
@@ -3,7 +3,13 @@
     flex-direction: column;
 }
 
+
 .languages{
     display: flex;
     flex-direction: column;
+    text-align: left;
+}
+
+.languages > h5 {
+    text-align: left;
 }
