--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -6,3 +6,16 @@
     flex-direction: column;
     justify-content: center;
 }
+
+@media screen and (max-width: 760px){
+    .projects-container{
+        width: 70%;
+    }
+
+}
+
+@media screen and (max-width: 480px){
+    .projects-container{
+        width: 80%;
+    }
+}
