--- a/src/components/blogs/blogs.css
+++ b/src/components/blogs/blogs.css
@@ -1,3 +1,23 @@
+
+
 .blogs-container{
-    
+    width: 700px;
+    text-align: center;
+    background-color: rgb(0, 0, 0);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+@media screen and (max-width: 760px){
+    .blogs-container{
+        width: 70%;
+    }
+
+}
+
+@media screen and (max-width: 480px){
+    .blogs-container{
+        width: 80%;
+    }
 }
