--- a/src/components/about/about-contents/from-to.css
+++ b/src/components/about/about-contents/from-to.css
@@ -1,159 +1,147 @@
-.from-to-container{
-    display: flex; 
-    flex-direction: column;
+.from-to-container {
+  display: flex;
+  flex-direction: column;
 }
 
-.edu-exp-container{
-    display: flex; 
-    justify-content: center;
+.edu-exp-container {
+  display: flex;
+  justify-content: center;
 }
 
-.edu-container{
-    display: flex;
-    flex-direction: column;
-    border: 0px solid white;
-    overflow: hidden;
+.edu-container {
+  display: flex;
+  flex-direction: column;
+  border: 0px solid white;
+  overflow: hidden;
 }
 
-
-.edu-item{
- background-color: white;
- margin: 20px;
- max-width: auto;
+.edu-item {
+  background-color: white;
+  margin: 20px;
+  max-width: auto;
 }
 
-
-.exp-item{
-    background-color: white;
- margin: 20px;
- max-width: auto;
+.exp-item {
+  background-color: white;
+  margin: 20px;
+  max-width: auto;
 }
 
-.edu-contents{
-    display: flex;
-    flex-direction: row; 
-    justify-content: space-evenly;
+.edu-contents {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
 
-.edu-desc{
-    text-align: left;
-    float: left;
-    margin-left: 5px;
-    margin-bottom: 10px;
+.edu-desc {
+  text-align: left;
+  float: left;
+  margin-left: 5px;
+  margin-bottom: 10px;
 }
 .edu-desc > * {
-    color: black;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: black;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
-.edu-desc > p{
-    font-size: 1.5vh;
-    font-weight: 200;
+.edu-desc > p {
+  font-size: 1.5vh;
+  font-weight: 200;
 }
-.edu-desc > p > strong{
-    color: black;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-weight: bolder;
-    font-size: 1.8vh; 
-    font-weight: 700;
-}
-
-
-
-.edu-desc > span{
-    font-style: italic;
-    font-size: 1.4vh;
-    
+.edu-desc > p > strong {
+  color: black;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-weight: bolder;
+  font-size: 1.8vh;
+  font-weight: 700;
 }
 
-.edu-time{
-    text-align: right;
-    float: right !important;
-    margin-right: 5px;
-    width: 100%;
-   
+.edu-desc > span {
+  font-style: italic;
+  font-size: 1.4vh;
+}
+
+.edu-time {
+  text-align: right;
+  float: right !important;
+  margin-right: 5px;
+  width: 100%;
 }
 
 .edu-time > span {
-    color: black;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-style: italic;
-    font-size: 1vh;
+  color: black;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-style: italic;
+  font-size: 1vh;
 }
 
-
-.line{
-    margin-top: 5%;
-    border-left: 3px solid white;
-    border-radius: 10px;
+.line {
+  margin-top: 5%;
+  border-left: 3px solid white;
+  border-radius: 10px;
 }
-
 
 @media screen and (max-width: 760px) {
-    .edu-time{
-        float: right;
-        margin-right: 5px;
-        width: 100%;
-    }
-    .edu-desc > p > strong{
-        color: black;
-        font-weight: 700;
-        font-size: 1.6vh;
-    }
-    
-    .edu-desc > p{
-        color: black;
-        font-size: 1.3vh;
-    
-    }
-    
-    .edu-desc > span{
-        color: black;
-        font-style: italic;
-        font-size: 1.1vh;
-    }
-    
-    .edu-time > span {
-        color: black;
-        font-style: italic;
-        font-size: 0.8vh;
-    }
-    .line{
-        margin-top: 8%;
-    }
-} 
+  .edu-time {
+    float: right;
+    margin-right: 5px;
+    width: 100%;
+  }
+  .edu-desc > p > strong {
+    color: black;
+    font-weight: 700;
+    font-size: 1.6vh;
+  }
+
+  .edu-desc > p {
+    color: black;
+    font-size: 1.3vh;
+  }
+
+  .edu-desc > span {
+    color: black;
+    font-style: italic;
+    font-size: 1.1vh;
+  }
+
+  .edu-time > span {
+    color: black;
+    font-style: italic;
+    font-size: 0.8vh;
+  }
+  .line {
+    margin-top: 8%;
+  }
+}
 
 @media screen and (min-width: 300px) and (max-width: 480px) {
+  .edu-desc > p > strong {
+    color: black;
+    font-weight: 700;
+    font-size: 1.3vh;
+  }
 
-    .edu-desc > p > strong{
-        color: black;
-        font-weight: 700;
-        font-size: 1.3vh;
-    }
-    
-    .edu-desc > p{
-        color: black;
-        font-size: 0.9vh;
-    
-    }
-    
-    .edu-desc > span{
-        color: black;
-        font-style: italic;
-        font-size: 0.7vh;
-    }
-    
-    .edu-time{
-        text-align: right;
-        margin-right: 5px;
-    }
-    
-    .edu-time > span {
-        color: black;
-        font-style: italic;
-        font-size: 0.5vh;
-    }
-    .line{
-        margin-top: 12%;
-    }
+  .edu-desc > p {
+    color: black;
+    font-size: 0.9vh;
+  }
 
-} 
+  .edu-desc > span {
+    color: black;
+    font-style: italic;
+    font-size: 0.7vh;
+  }
+
+  .edu-time {
+    text-align: right;
+    margin-right: 5px;
+  }
+
+  .edu-time > span {
+    color: black;
+    font-style: italic;
+    font-size: 0.5vh;
+  }
+  .line {
+    margin-top: 12%;
+  }
+}
