--- a/src/components/blogs/blog-item.css
+++ b/src/components/blogs/blog-item.css
@@ -1,17 +1,17 @@
-.blog-item-container{
-    background-color: white;
-    margin: 10px;
+.blog-item-container {
+  background-color: white;
+  margin: 10px;
 }
 
-.blog-item-container > *{
-    margin: 10px;
-    text-align: left;
-    color: black;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    max-width: 100%;
+.blog-item-container > * {
+  margin: 10px;
+  text-align: left;
+  color: black;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  max-width: 100%;
 }
 
-.blog-item-container > p > a{
-    color: blue;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+.blog-item-container > p > a {
+  color: blue;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
