--- a/src/components/home/hello-message.css
+++ b/src/components/home/hello-message.css
@@ -1,36 +1,36 @@
-.typewriter{
-    font-size: 1.8vh;
-    background-color: black;
-    display: flex;
-    font-family: 'Press Start 2P', cursive;
+.typewriter {
+  font-size: 1.8vh;
+  background-color: black;
+  display: flex;
+  font-family: "Press Start 2P", cursive;
 }
 
-.wave{
-    margin-top: -23px;
-    height: 6vh;
-    width: 6vh;
+.wave {
+  margin-top: -23px;
+  height: 6vh;
+  width: 6vh;
 }
 
-@media screen and (max-width: 760px){
-    .typewriter{
-        font-size: 1.4vh;
-    }
+@media screen and (max-width: 760px) {
+  .typewriter {
+    font-size: 1.4vh;
+  }
 
-    .wave{
-        margin-top: -10px;
-        height: 3.5vh;
-        width: 3.5vh;
-    }
+  .wave {
+    margin-top: -10px;
+    height: 3.5vh;
+    width: 3.5vh;
+  }
 }
 
-@media screen and (max-width: 480px){
-    .typewriter{
-        font-size: 0.9vh;
-    }
+@media screen and (max-width: 480px) {
+  .typewriter {
+    font-size: 0.9vh;
+  }
 
-    .wave{
-        margin-top: -3px;
-        height: 2.5vh;
-        width: 2.5vh;
-    }
+  .wave {
+    margin-top: -3px;
+    height: 2.5vh;
+    width: 2.5vh;
+  }
 }
