--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,68 +1,64 @@
-.nav-container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+.nav-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
-.navbar{
-     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    flex: 100%;
-   
-}
-
-.nav-button{
-    font-size: 1.7vh;
-    text-align: center;
-	display: inline-block;
-	margin:5px;
-    font-weight: bold;
-    padding: 10px 10px 10px 10px ;
-    background-color: rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
-    -webkit-border-radius: 7px;
-	-moz-border-radius: 7px;
-	-o-border-radius: 7px; 
-	 border-radius: 7px;
-    box-shadow: 0 .2em rgb(202, 201, 201); 
-    cursor: pointer;
-    text-decoration: none;
+.navbar {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  flex: 100%;
 }
 
-
-.nav-button:hover{
-    cursor: pointer;
-    box-shadow: none;
-	position: relative;
-	top: .3em;
+.nav-button {
+  font-size: 1.7vh;
+  text-align: center;
+  display: inline-block;
+  margin: 5px;
+  font-weight: bold;
+  padding: 10px 10px 10px 10px;
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
+  -webkit-border-radius: 7px;
+  -moz-border-radius: 7px;
+  -o-border-radius: 7px;
+  border-radius: 7px;
+  box-shadow: 0 0.2em rgb(202, 201, 201);
+  cursor: pointer;
+  text-decoration: none;
 }
 
-.nav-button:disabled{
-    color: rgb(255, 255, 255);
-    position: none;
-    top: 0em;
-    box-shadow: none; 
-    background-color: rgb(175, 171, 171);
-
+.nav-button:hover {
+  cursor: pointer;
+  box-shadow: none;
+  position: relative;
+  top: 0.3em;
 }
 
-@media screen and (max-width: 760px){
-    .navbar{
-        width: 740px;
-    }
-    .nav-button{
-        font-size: 1.5vh;
-    }
-
+.nav-button:disabled {
+  color: rgb(255, 255, 255);
+  position: none;
+  top: 0em;
+  box-shadow: none;
+  background-color: rgb(175, 171, 171);
 }
 
-@media screen and (max-width: 480px){
-    .navbar{
-        width: 350px;
-     }
-     .nav-button{
-        flex: 30%;
-        font-size: 1.3vh;
-     }
+@media screen and (max-width: 760px) {
+  .navbar {
+    width: 740px;
+  }
+  .nav-button {
+    font-size: 1.5vh;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .navbar {
+    width: 350px;
+  }
+  .nav-button {
+    flex: 30%;
+    font-size: 1.3vh;
+  }
 }
