--- a/src/index.css
+++ b/src/index.css
@@ -1,96 +1,111 @@
-@import url('http://fonts.googleapis.com/css?family=Press+Start+2P');
+@import url("http://fonts.googleapis.com/css?family=Press+Start+2P");
 
-*{
-    color: white;
-    font-family: 'Press Start 2P', cursive;
+* {
+  color: white;
+  font-family: "Press Start 2P", cursive;
 }
-body{
-    height: 100%;
-    width: 100%;
-    margin: 10px;
-    background-color: rgb(0, 0, 0) !important;
-    overflow-x: hidden;
+body {
+  height: 100%;
+  width: 100%;
+  margin: 10px;
+  background-color: rgb(0, 0, 0) !important;
+  overflow-x: hidden;
+}
+.space {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  height: 1px;
+  width: 1px;
+  background-color: #fff;
+  border-radius: 50%;
+  box-shadow: 43vw -10vh 0px 3px #fff, -23vw -5vh 3px 3px #fff,
+    22vw -48vh 2px 0px #fff, 1vw 28vh 2px 1px #fff, 8vw -33vh 2px 3px #fff,
+    8vw -3vh 1px 1px #fff, -23vw -47vh 0px 1px #fff, 16vw -21vh 1px 2px #fff,
+    -46vw -2vh 3px 0px #fff, 25vw -43vh 3px 1px #fff, -6vw -13vh 1px 0px #fff,
+    27vw -40vh 3px 0px #fff, -9vw -40vh 3px 0px #fff, 19vw 29vh 0px 2px #fff,
+    19vw -28vh 0px 2px #fff, -9vw -24vh 3px 3px #fff, -3vw -21vh 2px 2px #fff,
+    48vw -37vh 1px 0px #fff, 7vw -44vh 3px 2px #fff, -35vw -42vh 1px 1px #fff,
+    25vw 28vh 2px 1px #fff, 42vw -10vh 0px 0px #fff, -25vw 34vh 2px 0px #fff,
+    -28vw -31vh 2px 3px #fff, 27vw 12vh 1px 0px #fff, 8vw -37vh 1px 1px #fff,
+    39vw 40vh 2px 1px #fff, -11vw 8vh 3px 0px #fff, 12vw 35vh 3px 3px #fff,
+    -3vw 23vh 2px 2px #fff, -36vw -49vh 0px 1px #fff, 28vw 9vh 0px 0px #fff,
+    -34vw -32vh 1px 0px #fff, -50vw -9vh 0px 2px #fff, 4vw -28vh 0px 0px #fff,
+    -30vw -9vh 3px 1px #fff, -50vw -10vh 2px 3px #fff, 44vw -23vh 3px 1px #fff,
+    0vw 37vh 1px 2px #fff, 28vw 38vh 3px 0px #fff, 21vw 7vh 1px 3px #fff,
+    -45vw 48vh 0px 1px #fff, 1vw -24vh 1px 1px #fff, -1vw -27vh 3px 2px #fff,
+    -50vw 1vh 0px 3px #fff, -4vw -25vh 0px 3px #fff, 36vw 15vh 0px 1px #fff,
+    -14vw -17vh 1px 2px #fff, -41vw 26vh 1px 3px #fff, -26vw -5vh 0px 1px #fff,
+    -22vw 49vh 3px 2px #fff, 29vw -23vh 2px 0px #fff, 4vw -35vh 1px 0px #fff,
+    -20vw -14vh 1px 1px #fff, -6vw 36vh 0px 2px #fff, 4vw 15vh 1px 1px #fff,
+    -3vw -49vh 1px 1px #fff, -39vw 28vh 0px 2px #fff, 49vw -41vh 1px 3px #fff,
+    -33vw 4vh 0px 3px #fff, -22vw 42vh 2px 1px #fff, -25vw -8vh 0px 3px #fff,
+    -17vw -18vh 1px 3px #fff, 8vw -38vh 3px 2px #fff, -20vw -12vh 2px 2px #fff,
+    36vw 27vh 2px 1px #fff, 5vw 43vh 1px 3px #fff, -45vw -28vh 3px 2px #fff,
+    28vw 17vh 2px 3px #fff, 22vw 24vh 1px 3px #fff, -39vw -26vh 2px 1px #fff,
+    -44vw -24vh 0px 1px #fff, 1vw -48vh 2px 3px #fff, -33vw 36vh 2px 1px #fff,
+    -29vw -47vh 2px 1px #fff, 4vw 3vh 3px 3px #fff, 32vw 33vh 0px 3px #fff,
+    -35vw 25vh 3px 2px #fff, 8vw 5vh 3px 0px #fff, -50vw -4vh 2px 0px #fff,
+    3vw -34vh 0px 0px #fff, -5vw 42vh 2px 2px #fff, -7vw 29vh 0px 1px #fff,
+    1vw -15vh 3px 2px #fff, -21vw 14vh 0px 2px #fff, -14vw 38vh 0px 3px #fff;
+  animation: zoom 15s alternate infinite;
+}
 
-    }
-.space{
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    height: 1px;
-    width: 1px;
-    background-color: #fff;
-    border-radius: 50%;
-    box-shadow: 43vw -10vh 0px 3px #fff,-23vw -5vh 3px 3px #fff,22vw -48vh 2px 0px #fff,1vw 28vh 2px 1px #fff,8vw -33vh 2px 3px #fff,8vw -3vh 1px 1px #fff,-23vw -47vh 0px 1px #fff,16vw -21vh 1px 2px #fff,-46vw -2vh 3px 0px #fff, 25vw -43vh 3px 1px #fff,-6vw -13vh 1px 0px #fff,27vw -40vh 3px 0px #fff,-9vw -40vh 3px 0px #fff,19vw 29vh 0px 2px #fff,19vw -28vh 0px 2px #fff,-9vw -24vh 3px 3px #fff,-3vw -21vh 2px 2px #fff,48vw -37vh 1px 0px #fff,7vw -44vh 3px 2px #fff,-35vw -42vh 1px 1px #fff,25vw 28vh 2px 1px #fff,42vw -10vh 0px 0px #fff,-25vw 34vh 2px 0px #fff,-28vw -31vh 2px 3px #fff,27vw 12vh 1px 0px #fff,8vw -37vh 1px 1px #fff,39vw 40vh 2px 1px #fff,-11vw 8vh 3px 0px #fff,12vw 35vh 3px 3px #fff,-3vw 23vh 2px 2px #fff,-36vw -49vh 0px 1px #fff,28vw 9vh 0px 0px #fff,-34vw -32vh 1px 0px #fff,-50vw -9vh 0px 2px #fff,4vw -28vh 0px 0px #fff,-30vw -9vh 3px 1px #fff,-50vw -10vh 2px 3px #fff,44vw -23vh 3px 1px #fff,0vw 37vh 1px 2px #fff,28vw 38vh 3px 0px #fff,21vw 7vh 1px 3px #fff,-45vw 48vh 0px 1px #fff,1vw -24vh 1px 1px #fff,-1vw -27vh 3px 2px #fff,-50vw 1vh 0px 3px #fff,-4vw -25vh 0px 3px #fff,36vw 15vh 0px 1px #fff,-14vw -17vh 1px 2px #fff,-41vw 26vh 1px 3px #fff,-26vw -5vh 0px 1px #fff,-22vw 49vh 3px 2px #fff,29vw -23vh 2px 0px #fff,4vw -35vh 1px 0px #fff,-20vw -14vh 1px 1px #fff,-6vw 36vh 0px 2px #fff,4vw 15vh 1px 1px #fff,-3vw -49vh 1px 1px #fff,-39vw 28vh 0px 2px #fff,49vw -41vh 1px 3px #fff,-33vw 4vh 0px 3px #fff,-22vw 42vh 2px 1px #fff,-25vw -8vh 0px 3px #fff,-17vw -18vh 1px 3px #fff,8vw -38vh 3px 2px #fff,-20vw -12vh 2px 2px #fff,36vw 27vh 2px 1px #fff,5vw 43vh 1px 3px #fff,-45vw -28vh 3px 2px #fff,28vw 17vh 2px 3px #fff,22vw 24vh 1px 3px #fff,-39vw -26vh 2px 1px #fff,-44vw -24vh 0px 1px #fff,1vw -48vh 2px 3px #fff,-33vw 36vh 2px 1px #fff,-29vw -47vh 2px 1px #fff,4vw 3vh 3px 3px #fff,32vw 33vh 0px 3px #fff,-35vw 25vh 3px 2px #fff,8vw 5vh 3px 0px #fff,-50vw -4vh 2px 0px #fff,3vw -34vh 0px 0px #fff,-5vw 42vh 2px 2px #fff,-7vw 29vh 0px 1px #fff,1vw -15vh 3px 2px #fff,-21vw 14vh 0px 2px #fff,-14vw 38vh 0px 3px #fff;
-    animation: zoom 15s alternate infinite;
-   
-    }
-    
-    @keyframes zoom {
-        0%{
-            transform: scale(1);
-        }
-        100%{
-            transform: scale(1.3);
-        }
-    }
-
+@keyframes zoom {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.3);
+  }
+}
 
 .main {
   position: absolute;
   top: 10%;
   left: 50%;
   transform: translate(-50%, -10%);
-    margin-top: 3%;
+  margin-top: 3%;
 }
 
 .main > * {
-    width: 900px;
+  width: 900px;
 }
 
-.footer{
-   position: relative;
-   left: 0;
-   bottom: 0;
+.footer {
+  position: relative;
+  left: 0;
+  bottom: 0;
   width: 100%;
-    top: auto;
-   text-align: center;
-
+  top: auto;
+  text-align: center;
 }
-.footer > p{
-    color: rgb(255, 255, 255);
-    font-size: x-small;
+.footer > footer > p {
+  color: rgb(255, 255, 255);
+  font-size: x-small;
 }
 
 @media screen and (max-width: 760px) {
-    body{
-        overflow-x: hidden;
-    }
-    .main > *{
-        width: 720px;
-        margin-top: 4%;
-
-    }
-    /* .footer{
-        font-size: 1.4vh;
-    } */
+  body {
+    overflow-x: hidden;
+  }
+  .main > * {
+    width: 720px;
+    margin-top: 4%;
+  }
 }
 
 @media screen and (min-width: 300px) and (max-width: 480px) {
-    body{
-      
-        overflow-x: hidden;
-    }
-    .main {
-        margin-top: 8%;
-    }
-    .main > *{
-        width: 420px;
-
-    }
-    .footer{
-        font-size: xx-small;
-
-    }
+  body {
+    overflow-x: hidden;
+  }
+  .main {
+    margin-top: 8%;
+  }
+  .main > * {
+    width: 420px;
+  }
+  .footer > footer > p {
+    font-size: xx-small;
+  }
 }
-
-
