--- a/src/components/about/about-contents/about-item.css
+++ b/src/components/about/about-contents/about-item.css
@@ -1,112 +1,170 @@
 .about-item-container {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
+	display: flex;
+	flex-direction: column;
+	width: 100%;
 }
 .about-item {
-  display: flex;
-  flex-direction: column;
+	display: flex;
+	flex-direction: column;
 }
 
 .about-item > h3 {
-  text-align: center;
-  font-style: bold;
-  font-size: 2.4vh;
+	text-align: center;
+	font-style: bold;
+	font-size: 2.4vh;
 }
 
 .about-item > p {
-  display: flex;
-  text-align: center;
-  font-size: 1.5vh;
-  line-height: 1.5;
-  margin: 10px;
-  color: rgb(7, 218, 42);
+	display: flex;
+	text-align: center;
+	font-size: 1.5vh;
+	line-height: 1.5;
+	margin: 10px;
+	color: #39ff14;
 }
 .preview-button-container {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  overflow: hidden;
+	display: flex;
+	justify-content: center;
+	width: 100%;
+	overflow: hidden;
 }
 .preview-button {
-  font-size: 1.7vh;
-  text-align: center;
-  display: inline-block;
-  font-weight: bold;
-  color: rgb(0, 0, 0);
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -o-border-radius: 5px;
-  border-radius: 5px;
-  cursor: pointer;
-  text-decoration: none;
+	font-size: 1.7vh;
+	text-align: center;
+	display: inline-block;
+	font-weight: bold;
+	color: rgb(0, 0, 0);
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	-o-border-radius: 5px;
+	border-radius: 5px;
+	cursor: pointer;
+	text-decoration: none;
 }
 
 .preview-button:hover {
-  cursor: pointer;
-  box-shadow: none;
-  position: relative;
-  top: 0.3em;
+	cursor: pointer;
+	box-shadow: none;
+	position: relative;
+	top: 0.3em;
 }
 
 .preview-button > span {
-  color: black;
+	color: black;
 }
 
 .preview-reverse-container {
-  display: flex;
-  justify-content: center;
-  overflow: hidden;
+	display: flex;
+	justify-content: center;
+	overflow: hidden;
 }
 
 .preview-image-container {
-  display: flex;
-  justify-content: center;
-  height: 450px;
-  width: 100%;
-  overflow: hidden;
+	display: flex;
+	justify-content: center;
+	height: 450px;
+	width: 100%;
+	overflow: hidden;
 }
 
 .preview-image {
-  animation: preview-image-container 1s;
-  margin-top: 0%;
-  height: 100%;
-  width: 100%;
-  object-fit: scale-down;
+	animation: preview-image-container 1s;
+	margin-top: 0%;
+	height: 100%;
+	width: 100%;
+	object-fit: scale-down;
 }
 
 @keyframes preview-image-container {
-  from {
-    margin-top: -100%;
-  }
+	from {
+		margin-top: -100%;
+	}
 
-  to {
-    margin-top: 0%;
-  }
+	to {
+		margin-top: 0%;
+	}
+}
+
+.next-image {
+	display: flex;
+	flex-direction: row;
+}
+
+.lt {
+	position: absolute;
+	top: 48%;
+	left: 9%;
+	transform: translate(-48%, -9%);
+	font-size: 3vh;
+	cursor: pointer;
+}
+
+.gt {
+	position: absolute;
+	top: 48%;
+	left: 91%;
+	transform: translate(-48%, -91%);
+	margin-top: 21px;
+	font-size: 3vh;
+	cursor: pointer;
 }
 
 @media screen and (max-width: 760px) {
-  .about-item {
-    text-align: center;
-  }
-  .about-item > h3 {
-    line-height: 2.1;
-    font-size: 2vh;
-  }
-  .about-item > p {
-    font-size: 1.3vh;
-  }
+	.about-item {
+		text-align: center;
+	}
+	.about-item > h3 {
+		line-height: 2.1;
+		font-size: 2vh;
+	}
+	.about-item > p {
+		font-size: 1.3vh;
+	}
+
+	.lt {
+		position: absolute;
+		top: 47%;
+		left: 13%;
+		transform: translate(-47%, -13%);
+		font-size: 2.2vh;
+	}
+
+	.gt {
+		position: absolute;
+		top: 47%;
+		left: 87%;
+		transform: translate(-47%, -87%);
+		margin-top: 19px;
+		font-size: 2.2vh;
+	}
 }
 
-@media screen and(max-width: 480px) {
-  .about-item {
-    text-align: center;
-  }
-  .about-item > h3 {
-    font-size: 1.6vh;
-    line-height: 1.2;
-  }
-  .about-item > p {
-    font-size: 0.9vh;
-  }
+@media screen and (min-width: 300px) and (max-width: 480px) {
+	.about-item {
+		text-align: center;
+	}
+	.about-item > h3 {
+		font-size: 1.6vh;
+		line-height: 1.2;
+	}
+	.about-item > p {
+		font-size: 0.9vh;
+	}
+
+	.lt {
+		position: absolute;
+		top: 45%;
+		left: 8%;
+		transform: translate(-45%, -8%);
+		font-size: 1.5vh;
+	}
+
+	.gt {
+		position: absolute;
+		top: 45%;
+		left: 92%;
+		transform: translate(-45%, -92%);
+		margin-top: 10px;
+		font-size: 1.5vh;
+	}
 }
