--- a/src/components/about/about-me.css
+++ b/src/components/about/about-me.css
@@ -26,7 +26,7 @@
   }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 300px) and (max-width: 480px) {
   .about-container {
     width: 80%;
   }
