--- a/src/components/blogs/blogs.css
+++ b/src/components/blogs/blogs.css
@@ -13,7 +13,7 @@
   }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 300px) and (max-width: 480px) {
   .blogs-container {
     width: 80%;
   }
