--- a/src/components/home/hello-message.css
+++ b/src/components/home/hello-message.css
@@ -23,7 +23,7 @@
   }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 300px) and (max-width: 480px) {
   .typewriter {
     font-size: 0.9vh;
   }
