--- a/src/components/home/intro.css
+++ b/src/components/home/intro.css
@@ -12,7 +12,7 @@
 .intro-container > div > p {
   font-size: 1.5vh;
   filter: contrast(200%);
-  color: rgb(7, 218, 42);
+  color: #39ff14;
 }
 
 .intro-container > div > span {
@@ -20,7 +20,7 @@
   font-style: italic;
   filter: contrast(200%);
   line-height: 1.5;
-  color: rgb(7, 218, 42);
+  color: #39ff14;
 }
 
 .intro-container > div > strong {
@@ -51,7 +51,7 @@
   }
 }
 
-@media screen and(max-width: 480px) {
+@media screen and (min-width: 300px) and (max-width: 480px) {
   .intro-container {
     width: 60%;
     text-align: center;
