--- a/src/components/home/logo.css
+++ b/src/components/home/logo.css
@@ -15,7 +15,7 @@
   }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 300px) and (max-width: 480px) {
   .logo {
     height: 220px;
     width: 230px;
