--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -53,7 +53,7 @@
   }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 300px) and (max-width: 480px) {
   .navbar {
     width: 350px;
   }
