--- a/src/components/resume/my-resume.css
+++ b/src/components/resume/my-resume.css
@@ -31,7 +31,7 @@
   }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 300px) and (max-width: 480px) {
   .resume-container {
     width: 90%;
   }
