--- a/src/components/about/about-contents/about-item.css
+++ b/src/components/about/about-contents/about-item.css
@@ -99,6 +99,7 @@
 	cursor: pointer;
 }
 
+
 .gt {
 	position: absolute;
 	top: 48%;
@@ -127,6 +128,7 @@
 		left: 13%;
 		transform: translate(-47%, -13%);
 		font-size: 2.2vh;
+		background-color: black;
 	}
 
 	.gt {
@@ -136,6 +138,7 @@
 		transform: translate(-47%, -87%);
 		margin-top: 19px;
 		font-size: 2.2vh;
+		background-color: black;
 	}
 }
 
