--- a/src/components/home/intro.css
+++ b/src/components/home/intro.css
@@ -1,70 +1,82 @@
 .intro-container {
-  width: 580px;
-  text-align: center;
-  background-color: rgb(0, 0, 0);
-  border: 0px solid white;
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+	width: 580px;
+	text-align: center;
+	background-color: rgb(0, 0, 0);
+	border: 0px solid white;
+	border-radius: 10px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
 
-.intro-container > div > p {
-  font-size: 1.5vh;
-  filter: contrast(200%);
-  color: #39ff14;
+.intro-container > p {
+	font-size: 1.4vh;
+	filter: contrast(200%);
+	color: #39ff14;
+	line-height: 1.9;
 }
 
-.intro-container > div > span {
-  font-size: 1.8vh;
-  font-style: italic;
-  filter: contrast(200%);
-  line-height: 1.5;
-  color: #39ff14;
+.intro-container > span {
+	font-size: 2vh;
+	font-style: italic;
+	filter: contrast(200%);
+	line-height: 1.5;
+	color: #39ff14;
 }
 
 .intro-container > div > strong {
-  font-size: 2.9vh;
-  filter: contrast(200%);
-  line-height: 1.5;
+	font-size: 2.9vh;
+	filter: contrast(200%);
+	line-height: 1.9;
 }
 
-.intro-container > div > span > i {
-  color: rgb(7, 218, 42);
+.intro-container > span {
+  font-size: 2vh;
+  font-style: italic;
+}
+
+.intro-container > span > i {
+	color: #39ff14;
+	font-size: 2vh;
+	line-height: 1.9;
 }
 
 @media screen and (max-width: 760px) {
-  .intro-container {
-    width: 60%;
-    text-align: center;
-  }
-  .intro-container > div > p {
-    font-size: 1.3vh;
-  }
-  .intro-container > div > span {
-    font-size: 1.5vh;
-    font-style: italic;
-  }
+	.intro-container {
+		width: 60%;
+		text-align: center;
+	}
+	.intro-container > p {
+		font-size: 1.3vh;
+	}
+	.intro-container > span {
+		font-size: 1.5vh;
+		font-style: italic;
+	}
 
-  .intro-container > div > strong {
-    font-size: 2.5vh;
-  }
+	.intro-container > div > strong {
+		font-size: 2.5vh;
+	}
 }
 
 @media screen and (min-width: 300px) and (max-width: 480px) {
-  .intro-container {
-    width: 60%;
-    text-align: center;
-  }
-  .intro-container > div > p {
-    font-size: 0.9vh;
-  }
-  .intro-container > div > span {
+	.intro-container {
+		width: 60%;
+		text-align: center;
+	}
+	.intro-container > p {
+		font-size: 0.9vh;
+	}
+	.intro-container > span {
+		font-size: 1.2vh;
+		font-style: italic;
+	}
+  .intro-container > span > i {
     font-size: 1.2vh;
-    font-style: italic;
+		font-style: italic;
   }
 
-  .intro-container > div > strong {
-    font-size: 2vh;
-  }
+	.intro-container > div > strong {
+		font-size: 2vh;
+	}
 }
