--- a/src/components/blogs/blogs.css
+++ b/src/components/blogs/blogs.css
@@ -1,20 +1,37 @@
 .blogs-container {
-  width: 700px;
-  text-align: center;
-  background-color: rgb(0, 0, 0);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+	width: 700px;
+	text-align: center;
+	background-color: rgb(0, 0, 0);
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+
+.blogs-container > p {
+	text-decoration: underline;
+	cursor: pointer;
+	font-size: 1.4vh;
+	color: white;
+}
+.blogs-container > p:hover {
+	color: #39ff14;
 }
 
 @media screen and (max-width: 760px) {
-  .blogs-container {
-    width: 70%;
-  }
+	.blogs-container {
+		width: 70%;
+	}
+
+	.blogs-container > p {
+		font-size: 1.2vh;
+	}
 }
 
 @media screen and (min-width: 300px) and (max-width: 480px) {
-  .blogs-container {
-    width: 80%;
-  }
+	.blogs-container {
+		width: 80%;
+	}
+	.blogs-container > p {
+		font-size: 1vh;
+	}
 }
