--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("http://fonts.googleapis.com/css?family=Press+Start+2P");
+@import url("https://fonts.googleapis.com/css?family=Press+Start+2P");
 
 * {
   color: white;
