--- a/src/components/home/intro.css
+++ b/src/components/home/intro.css
@@ -2,7 +2,7 @@
 	width: 400px;
 	text-align: center;
 	background-color: white;
-	border: 0px solid white;
+	/* border: 0px solid white; */
 	border-radius: 5px;
 	display: flex;
 	flex-direction: column;
@@ -11,15 +11,15 @@
 }
 
 .avatar{
-	margin-top: 10%;
+	padding: 10px;
 }
 
 .avatar-image{
-	height: 100px;
-	width: 100px;
+	height: 120px;
+	width: 120px;
 	border-radius: 50%;
 	object-fit: cover;
-	
+	z-index: 100;
 }
 
 .intro-container > p {
