--- a/src/components/home/intro.css
+++ b/src/components/home/intro.css
@@ -29,7 +29,7 @@
 }
 
 .contents{
-	margin-top: 20%;
+	margin-top: 22%;
 }
 
 .contents > p {
@@ -51,6 +51,7 @@
 .contents > div > strong {
 	font-family: Futura;
 	font-size: 3.5vh;
+	line-height: 2;
 	color: black;
 }
 
@@ -62,7 +63,6 @@
 .contents > span > i {
 	color: black;
 	font-size: 2vh;
-	/* line-height: 1.9; */
 	font-family: Futura;
 }
 
@@ -71,13 +71,6 @@
 		width: 50%;
 		text-align: center;
 	}
-	/* .avatar {
-		height: 100px;
-		padding: 10px;
-		border-radius: 5px;
-		display: flex;
-		justify-content: center;
-	} */
 	
 	.avatar-image {
 		border: 4px solid white;
