--- a/src/components/home/intro.css
+++ b/src/components/home/intro.css
@@ -25,10 +25,9 @@
 	object-fit: cover;
 	position: fixed;
 	margin-top: 65px;
-	
 }
 
-.contents{
+.contents {
 	margin-top: 22%;
 }
 
@@ -55,8 +54,7 @@
 }
 
 .contents > span {
-	font-size: 2.3vh;
-	font-style: italic;
+	font-size: 2vh;
 }
 
 .contents > span > i {
@@ -64,13 +62,18 @@
 	font-size: 2vh;
 	font-family: Futura;
 }
+.contents > span > i > img {
+	height: 20px;
+	width: 20px;
+	
+}
 
 @media screen and (max-width: 760px) {
 	.intro-container {
 		width: 50%;
 		text-align: center;
 	}
-	
+
 	.avatar-image {
 		border: 4px solid white;
 		height: 130px;
@@ -79,14 +82,12 @@
 		object-fit: cover;
 		position: fixed;
 		margin-top: 70px;
-		
 	}
 	.contents > p {
 		font-size: 1.3vh;
 	}
 	.contents > span {
-		font-size: 1.5vh;
-		font-style: italic;
+		font-size: 1.8vh;
 	}
 
 	.contents > div > strong {
@@ -108,7 +109,6 @@
 		object-fit: cover;
 		position: fixed;
 		margin-top: 80px;
-		
 	}
 	.contents > p {
 		font-size: 0.9vh;
