--- a/src/components/home/intro.css
+++ b/src/components/home/intro.css
@@ -25,6 +25,7 @@
 	object-fit: cover;
 	position: fixed;
 	margin-top: 65px;
+	cursor: pointer;
 }
 
 .contents {
@@ -32,7 +33,7 @@
 }
 
 .contents > p {
-	font-size: 2vh;
+	font-size: 1.8vh;
 	filter: contrast(200%);
 	color: black;
 	font-family: Futura;
