--- a/src/components/about/about-contents/about-item.css
+++ b/src/components/about/about-contents/about-item.css
@@ -25,8 +25,7 @@
 .preview-button-container {
 	display: flex;
 	justify-content: center;
-	width: 100%;
-	overflow: hidden;
+	/* width: 100%; */
 }
 .preview-button {
 	font-size: 1.7vh;
@@ -56,8 +55,8 @@
 .preview-reverse-container {
 	display: flex;
 	justify-content: center;
-	width: 100%;
-	overflow: hidden;
+	/* width: 100%;
+	overflow: hidden; */
 }
 
 .preview-image-container {
