--- a/src/components/home/intro.css
+++ b/src/components/home/intro.css
@@ -1,7 +1,8 @@
 .intro-container {
 	width: 400px;
 	text-align: center;
-	/* background-color: white; */
+	background-color: black;
+	border: 2px solid white;
 	border-radius: 5px;
 	display: flex;
 	flex-direction: column;
@@ -12,13 +13,14 @@
 .avatar {
 	height: 130px;
 	padding: 10px;
-	border-radius: 5px;
+	/* border-radius: 5px; */
 	display: flex;
 	justify-content: center;
+	border-bottom: 2px solid white;
 }
 
 .avatar-image {
-	border: 4px solid white;
+	border: 3px solid white;
 	height: 150px;
 	width: 150px;
 	border-radius: 50%;
@@ -30,6 +32,7 @@
 
 .contents {
 	margin-top: 22%;
+
 }
 
 .contents > p {
@@ -74,6 +77,9 @@
 		width: 50%;
 		text-align: center;
 	}
+	.avatar {
+		height: 120px;
+	}
 
 	.avatar-image {
 		border: 4px solid white;
@@ -105,6 +111,10 @@
 		text-align: center;
 	}
 
+	.avatar {
+		height: 90px;
+	}
+
 	.avatar-image {
 		border: 4px solid white;
 		height: 110px;
@@ -112,7 +122,7 @@
 		border-radius: 50%;
 		object-fit: cover;
 		position: fixed;
-		margin-top: 80px;
+		margin-top: 40px;
 	}
 	.contents > p {
 		font-size: 0.9vh;
