--- a/src/components/home/intro.css
+++ b/src/components/home/intro.css
@@ -13,7 +13,7 @@
 .avatar {
 	height: 130px;
 	padding: 10px;
-	/* border-radius: 5px; */
+	border-radius: 5px;
 	display: flex;
 	justify-content: center;
 	border-bottom: 2px solid white;
@@ -62,7 +62,7 @@
 }
 
 .contents > span > i {
-	color: white;
+	/* color: white; */
 	font-size: 1.8vh;
 	font-family: Futura;
 }
