--- a/src/components/home/intro.css
+++ b/src/components/home/intro.css
@@ -11,27 +11,28 @@
 }
 
 .avatar {
-	height: 130px;
+	height: 100px;
 	padding: 10px;
 	border-radius: 5px;
 	display: flex;
 	justify-content: center;
 	border-bottom: 2px solid white;
+	background-size: auto;
 }
 
 .avatar-image {
 	border: 3px solid white;
-	height: 150px;
-	width: 150px;
+	height: 110px;
+	width: 110px;
 	border-radius: 50%;
 	object-fit: cover;
 	position: fixed;
-	margin-top: 65px;
+	margin-top: 55px;
 	cursor: pointer;
 }
 
 .contents {
-	margin-top: 22%;
+	margin-top: 16%;
 
 }
 
@@ -62,13 +63,12 @@
 }
 
 .contents > span > i {
-	/* color: white; */
 	font-size: 1.8vh;
 	font-family: Futura;
 }
 .contents > span > i > img {
-	height: 20px;
-	width: 20px;
+	height: 15px;
+	width: 15px;
 	
 }
 
@@ -78,17 +78,13 @@
 		text-align: center;
 	}
 	.avatar {
-		height: 120px;
+		height: 90px;
 	}
 
 	.avatar-image {
-		border: 4px solid white;
-		height: 130px;
-		width: 130px;
-		border-radius: 50%;
-		object-fit: cover;
-		position: fixed;
-		margin-top: 70px;
+		height: 90px;
+		width: 90px;
+		margin-top: 53px;
 	}
 	.contents > p {
 		font-size: 1.3vh;
@@ -112,17 +108,13 @@
 	}
 
 	.avatar {
-		height: 90px;
+		height: 65px;
 	}
 
 	.avatar-image {
-		border: 4px solid white;
-		height: 110px;
-		width: 110px;
-		border-radius: 50%;
-		object-fit: cover;
-		position: fixed;
-		margin-top: 40px;
+		height: 75px;
+		width: 75px;
+		margin-top: 37px;
 	}
 	.contents > p {
 		font-size: 0.9vh;
