--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,10 @@ body {
 	width: 100%;
 	margin: 10px;
 	background-color: rgb(0, 0, 0) !important;
-	/* overflow-x: hidden; */
+	min-height: 100vh;
+  overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
 }
 .space {
 	position: fixed;
@@ -55,9 +58,9 @@ body {
 
 .main {
 	position: absolute;
-	top: 5%;
+	top: 7%;
 	left: 50%;
-	transform: translate(-50%, -5%);
+	transform: translate(-50%, -7%);
 	margin-top: 3%;
 }
 
@@ -66,11 +69,8 @@ body {
 }
 
 .footer {
-	/* position: relative; */
-	/* left: 0; */
-	bottom: 0;
-	/* width: 100%; */
-	/* top: 110%; */
+  bottom: 0;
+  width: 100%;
 	text-align: center;
 }
 .footer > footer > p {
@@ -86,18 +86,9 @@ body {
 		width: 720px;
 		margin-top: 3%;
 	}
-  .footer > footer > p {
+	.footer > footer > p {
 		font-size: xx-small;
 	}
-
-	/* .footer {
-		position: relative;
-		left: 0;
-		bottom: 0;
-		width: 100%;
-		top: 100%;
-		text-align: center;
-	} */
 }
 
 @media screen and (min-width: 300px) and (max-width: 480px) {
@@ -113,12 +104,4 @@ body {
 	.footer > footer > p {
 		font-size: xx-small;
 	}
-	/* .footer {
-		position: relative;
-		left: 0;
-		bottom: 0;
-		width: 100%;
-		top: 100%;
-		text-align: center;
-	} */
 }
