--- a/src/components/projects/project-item.css
+++ b/src/components/projects/project-item.css
@@ -2,6 +2,10 @@
   width: 100%;
 }
 
+.project-item-container  > h3 > span{
+  font-size: 2vh;
+}
+
 .project-video {
   display: flex;
   justify-content: center;
@@ -28,5 +32,17 @@
 
 .tools-used > * {
   margin: 20px;
+}
+
+@media screen and (max-width: 760px) {
+	.project-item-container > h3 > span {
+		font-size: 1.8vh;
+	}
+}
+
+@media screen and (min-width: 300px) and (max-width: 480px) {
+	.project-item-container > h3 > span {
+		font-size: 1.6vh;
+	}
 }
 
