--- a/src/components/home/intro.css
+++ b/src/components/home/intro.css
@@ -1,8 +1,8 @@
 .intro-container {
 	width: 400px;
 	text-align: center;
-	background-color: black;
-	border: 2px solid white;
+	/* background-color: black; */
+	/* border: 2px solid white; */
 	border-radius: 5px;
 	display: flex;
 	flex-direction: column;
@@ -16,7 +16,7 @@
 	border-radius: 5px;
 	display: flex;
 	justify-content: center;
-	border-bottom: 2px solid white;
+	/* border-bottom: 2px solid white; */
 	background-size: auto;
 }
 
@@ -34,6 +34,10 @@
 .contents {
 	margin-top: 16%;
 
+}
+
+.contents > *{
+	background-color: black;
 }
 
 .contents > p {
