--- a/src/components/home/logo.css
+++ b/src/components/home/logo.css
@@ -11,13 +11,13 @@
 @media screen and (max-width: 760px) {
   .logo {
     height: 160px;
-    width: 160px;
+    min-width: 160px;
   }
 }
 
 @media screen and (min-width: 300px) and (max-width: 480px) {
   .logo {
     height: 150px;
-    width: 150px;
+    min-width: 150px;
   }
 }
