--- a/src/components/resume/my-resume.css
+++ b/src/components/resume/my-resume.css
@@ -26,7 +26,7 @@
     width: 80%;
   }
   .my-resume {
-    max-width: 100%;
+    min-width: 100%;
   }
 }
 
@@ -35,6 +35,6 @@
     width: 90%;
   }
   .my-resume {
-    max-width: 100%;
+    min-width: 100%;
   }
 }
