--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,12 @@
 	font-family: 'Press Start 2P', cursive;
 }
 body {
-	width: 100%;
-	/* margin: 10px; */
-	background-color: rgb(0, 0, 0) !important;
+	max-width: 100%;
 	min-height: 100vh;
+	background-color: rgb(0, 0, 0) !important;
 	overflow-x: hidden;
+	/* outline: 1px red solid !important;
+	visibility: visible !important; */
 }
 .space {
 	position: fixed;
@@ -55,19 +56,13 @@ body {
 }
 
 .main {
-	/* position: absolute;
-	top: 10%;
-	left: 50%;
-	transform: translate(-50%, -10%); */
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	margin-top: 4%;
 	overflow-x: hidden;
 }
 
 .main > * {
-	/* width: 900px; */
 	width: auto;
 }
 
