making dynamic routes for each projects

--- a/src/components/projects/project-item.css
+++ b/src/components/projects/project-item.css
@@ -20,7 +20,8 @@
 .video-player:hover {
 	z-index: 1000;
 	transform: scale(1.4);
-	border: 10px solid hsla(0,0%,100%,.5);
+	background-color: transparent;
+	filter: blur(9px);
 }
 
 .card-contents {
