making dynamic routes for each projects

--- a/src/components/projects/each-project-item.css
+++ b/src/components/projects/each-project-item.css
@@ -1,5 +1,8 @@
 .project-item-container {
-  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 700px;
 }
 
 .project-item-container  > h3 > span{
