--- a/src/components/about/about-contents/from-to.css
+++ b/src/components/about/about-contents/from-to.css
@@ -16,7 +16,7 @@
 	display: flex;
 	flex-direction: column;
 	border: 0px solid white;
-	overflow: hidden;
+	/* overflow: hidden; */
 }
 
 .edu-item {
@@ -28,6 +28,7 @@
 .exp-item {
 	background-color: white;
 	margin: 20px;
+	width: auto;
 	max-width: auto;
 }
 
