--- a/src/index.css
+++ b/src/index.css
@@ -72,6 +72,7 @@ body {
 	bottom: 0;
 	width: auto;
 	text-align: center;
+	
 }
 .footer > footer > p {
 	color: rgb(255, 255, 255);
@@ -85,6 +86,10 @@ body {
 	.main > * {
 		width: auto;
 		/* margin-top: 3%; */
+	}
+
+	.footer { 
+		margin-top: 7%;
 	}
 	.footer > footer > p {
 		font-size: xx-small;
@@ -100,6 +105,9 @@ body {
 	}
 	.main > * {
 		width: auto;
+	}
+	.footer {
+		margin-top: 4%;
 	}
 	.footer > footer > p {
 		font-size: xx-small;
