--- a/src/components/about/about-contents/about-item.css
+++ b/src/components/about/about-contents/about-item.css
@@ -64,12 +64,13 @@
 	height: 450px;
 	width: 100%;
 	overflow: hidden;
+	object-fit: fill;
 }
 
 .preview-image {
 	animation: preview-image-container 1s;
 	margin-top: 0%;
-	height: 100%;
+	height: auto;
 	width: 100%;
 	object-fit: scale-down;
 }
