--- a/src/components/projects/project-item.css
+++ b/src/components/projects/project-item.css
@@ -8,7 +8,9 @@
   width: 300px;
   margin: 25px;
   cursor: pointer;
+  border-radius: 20px;
 }
+
 
 .project-item-card:hover {
   position: relative;
