--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,8 @@
 
 * {
 	color: white;
-	font-family: 'Press Start 2P', cursive;
+	/* font-family: 'Press Start 2P', cursive; */
+	font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 body {
 	max-width: 100%;
@@ -76,7 +77,7 @@ body {
 }
 .footer > footer > p {
 	color: rgb(255, 255, 255);
-	font-size: x-small;
+	font-size: small;
 }
 
 @media screen and (max-width: 760px) {
@@ -92,7 +93,7 @@ body {
 		margin-top: 7%;
 	}
 	.footer > footer > p {
-		font-size: xx-small;
+		font-size: small;
 	}
 }
 
@@ -110,6 +111,6 @@ body {
 		margin-top: 4%;
 	}
 	.footer > footer > p {
-		font-size: xx-small;
+		font-size: x-small;
 	}
 }
