--- a/src/components/home/intro.css
+++ b/src/components/home/intro.css
@@ -15,6 +15,7 @@
 	display: flex;
 	justify-content: center;
 	background-size: auto;
+	
 }
 
 .avatar-image {
@@ -24,6 +25,7 @@
 	object-fit: cover;
 	margin-top: 42px;
 	cursor: pointer;
+	border: 4px solid black;
 }
 
 .contents {
