--- a/src/components/about/about-contents/about-item.css
+++ b/src/components/about/about-contents/about-item.css
@@ -20,7 +20,7 @@
   font-size: 2vh;
   line-height: 1.5;
   margin: 10px;
-  color: #39ff14;
+  /* color: #39ff14; */
 }
 .preview-button-container {
   display: flex;
@@ -92,22 +92,18 @@
 
 .next-image > div > button {
   color: black;
-  font-size: 1.2vh;
+  font-size: 1.8vh;
 }
 
 .lt {
   position: relative;
   top: 50%;
-
-  font-size: 3vh;
   cursor: pointer;
 }
 
 .gt {
   position: relative;
   top: 50%;
-
-  font-size: 3vh;
   cursor: pointer;
 }
 
@@ -120,15 +116,12 @@
     font-size: 2.8vh;
   }
   .about-item > p {
-    font-size: 1.3vh;
+    font-size: 1.8vh;
   }
 
-  .lt {
-    font-size: 2.2vh;
-  }
-
-  .gt {
-    font-size: 2.2vh;
+  .next-image > div > button {
+    color: black;
+    font-size: 1.5vh;
   }
 }
 
@@ -141,14 +134,11 @@
     line-height: 1.2;
   }
   .about-item > p {
-    font-size: 0.9vh;
+    font-size: 1.6vh;
   }
 
-  .lt {
-    font-size: 1.5vh;
-  }
-
-  .gt {
-    font-size: 1.5vh;
+  .next-image > div > button {
+    color: black;
+    font-size: 1.2vh;
   }
 }
