everything looks clean

--- a/src/components/about/about-contents/about-item.css
+++ b/src/components/about/about-contents/about-item.css
@@ -20,7 +20,7 @@
   font-size: 2vh;
   line-height: 1.5;
   margin: 10px;
-  /* color: #39ff14; */
+  color: #39ff14;
 }
 .preview-button-container {
   display: flex;
