--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -1,8 +1,15 @@
 .projects-container {
   width: 700px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
+}
+
+.page-title > h3 > span{
+  font-size: 3vh;
+  display: inline-block;
+  background-color: black;
 }
 
 .projects{
@@ -17,10 +24,18 @@
   .projects-container {
     width: 70%;
   }
+  .page-title > h3 > span{
+    font-size: 2.8vh;
+
+  }
 }
 
 @media screen and (min-width: 300px) and (max-width: 480px) {
   .projects-container {
     width: 80%;
+  }
+  .page-title > h3 > span{
+    font-size: 2.5vh;
+   
   }
 }
