--- a/src/components/resume/my-resume.css
+++ b/src/components/resume/my-resume.css
@@ -1,10 +1,12 @@
 .resume-container {
   width: 600px;
   text-align: center;
-  background-color: rgb(18, 18, 18);
+  background-color: rgb(0, 0, 0);
   border-radius: 10px;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .my-resume-container {
   display: flex;
@@ -17,8 +19,7 @@
 }
 
 .download-button-container {
-  display: flex;
-  justify-content: space-around;
+  width: 80%;
 }
 
 @media screen and (max-width: 760px) {
