--- a/src/index.css
+++ b/src/index.css
@@ -151,6 +151,37 @@ body {
 	}
   }
 
+  @keyframes changeBorder {
+	0% {
+	  border: 3px solid #80dfff;
+	}
+  
+	15% {
+	  border: 3px solid #cc6600;
+	}
+	30% {
+	  border: 3px solid #00ccff;
+	}
+	45% {
+	  border: 3px solid #ffff00;
+	}
+  
+	60% {
+	  border: 3px solid #ff00ff;
+	}
+  
+	70% {
+	  border: 3px solid #00cc00;
+	}
+  
+	85% {
+	  border: 3px solid #00ccff;
+	}
+	100% {
+	  border: 3px solid #ff9900;
+	}
+  }
+
 @media screen and (max-width: 760px) {
   body {
     overflow-x: hidden;
